<resources>
    <string name="app_name" translatable="false">E-Burst</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">This is page one</string>
    <string name="second_fragment_label">This is page two</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">Something</string>
    <string name="battery_level">Battery Level:</string>
    <string name="power_curve_adjustment" translatable="false">Power Curve Adjustment:</string>
    <string name="controller_info">Controller Info:</string>
    <string name="language">Language</string>
    <string name="connect">Connect</string>
    <string name="view_connected_devices">View Connected Devices</string>
    <string name="bluetooth_off">Bluetooth OFF</string>
    <string name="km_h" translatable="false">km/h</string>
    <string name="_10" translatable="false">10</string>
    <string name="current_speed">Current Speed:</string>
    <string name="distance_travelled">Distance Travelled:</string>
    <string name="reset">Reset</string>
    <string name="km" translatable="false">km</string>
</resources>