<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/staticLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@color/colorLightBlue">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/logo2_withbackgruond" />

        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginStart="@dimen/fab_margin"
            android:textColor="@color/black"
            android:text="@string/battery_level"
            android:textSize="@dimen/small_font_size"/>
        <ProgressBar
            android:id="@+id/progressBar3"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:progress="40"
            android:progressTint="#7CFC00" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mLlayoutBottomButtons2"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"

        >

        <TextView
            android:id="@+id/speed_header"
            android:textSize="@dimen/small_font_size"
            android:layout_marginStart="20dp"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/current_speed" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bt_read"
                android:layout_width="104dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:gravity="end"
                android:text="@string/_10"
                android:textColor="@color/colorSelectedBlue"
                android:textSize="60sp" />

            <TextView
                android:id="@+id/bt_km"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:text="@string/km_h"
                android:gravity="center"
                android:textColor="@color/colorSelectedBlue"
                android:textSize="60sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:weightSum="100"
                android:gravity="center"
                android:orientation="horizontal">

                <!--<Button
                    android:id="@+id/scan"
                    android:layout_width="wrap_content"
                    android:layout_margin="6dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorPrimaryLightBlue"
                    android:text="Bluetooth ON"
                    app:shapeAppearanceOverlay="@style/RoundedShapeAppearance"
                    android:textColor="@color/white" />
                -->
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:weightSum="100"
                android:gravity="center"
                android:orientation="horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mLlayoutBottomButtons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bt_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/fab_margin"
                android:text="" />

            </LinearLayout>

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:backgroundTint="@color/colorLightBlue"
        android:src="@drawable/settingsicon"
        android:tintMode="@color/black"
        app:shapeAppearanceOverlay="@style/RoundedShapeAppearance"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center" >

        <Button
            android:id="@+id/off"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="6dp"
            android:backgroundTint="@color/gray"
            android:text="@string/bluetooth_off"
            android:textColor="@color/black"
            android:textSize="@dimen/small_font_size"
            app:shapeAppearanceOverlay="@style/RoundedShapeAppearance" />
    </LinearLayout>
</RelativeLayout>
